# react-on-django

./: .gitignore  CHANGELOG.md  CLA.md  LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml  ruff.toml
.claude/: napkin.md
.github/workflows/: ci.yml  release.yml  trigger-docs-site.yml
docs/: README.md  introduction.md  sidebars.ts
docs/getting-started/: create-react-on-django-app.md  installation.md  quick-start.md
docs/guides/: client-rendering.md  configuration.md  helper-apis.md  licensing.md  rsc.md  server-rendering.md  streaming-ssr.md  testing-and-operations.md
docs/pro/: overview.md  upgrading-to-pro.md
example/: Procfile.dev  Procfile.prod  manage.py  package-lock.json  package.json  playwright.config.ts
example/client/: node-renderer.js
example/e2e/: app.spec.ts  rsc-payload.spec.ts
example/react_on_django_example/: asgi.py  settings.py  urls.py  views.py  wsgi.py
example/scripts/: build_example.mjs  fake_renderer.py  smoke_stack.py  write_example_manifest.mjs
example/templates/: base.html  client_side_hello_world.html  client_side_hello_world_shared_store.html  client_side_hello_world_with_options.html  index.html  metadata_example.html  rsc_hello_world_shell.html  server_render_js_example.html  server_side_hello_world.html  server_side_hello_world_shared_store.html  streaming_hello_world_shell.html
scripts/: release.py
src/react_on_django/: __about__.py  __init__.py  apps.py  assets.py  component.py  conf.py  context_processors.py  (+5 more)
tests/: __init__.py  conftest.py  settings.py  test_assets.py  test_component_rendering.py  test_configuration.py  test_html_output.py  test_json_serialization.py  test_management_commands.py  test_release.py  test_repository_contracts.py  test_server_rendering.py  test_templatetags.py
(+33 files in other folders)
